added ALL page and improving look and feel of each post YAML

--- a/_posts/2015-10-09-mira-awad.md
+++ b/_posts/2015-10-09-mira-awad.md
@@ -1,19 +1,16 @@
 ---
 layout: post
 title: "Mira Awad"
-tagline: "May 2009, Jewish Chronicle"
-description: "Interview with pioneering Palestinian Israeli actor and singer Mira Awad"
+original_date: "May 2009"
+original_published: "Jewish Chronicle"
+description: "Interview with pioneering Palestinian Israeli actor and singer"
 category: 'journalism'
+image: miraawad.jpg
 tags: ['israel','television','eurovision','arabic', 'jewish chronicle']
 ---
 {% include JB/setup %}
 
-##{{page.title}}
-#{{page.tagline}}
-
-
 <span class="marginnote">!['Mira Awad']({{ASSET_PATH}}tufte/images/miraawad.jpg)</span>
-
 
 The peace organisation OneVoice are throwing a farewell party in Tel Aviv’s Dizengoff Street for this year’s Israeli entry to the Eurovision Song Contest, and the two singers – newly anointed peace ambassadors for OneVoice – are being rushed from one soundbite hungry journalist to another in what is the last press opportunity before they leave for Moscow. For veteran singer and peace campaigner, Yemenite Israeli singer Achinoam ‘Noa’ Nini, this intense global media spotlight is nothing new: from recording songs for hit films such as ‘Goldeneye’ and Roberto Benigni’s ‘Life Is Beautiful’ to sharing stages with megastars like Sting and Stevie Wonder, the press know her well enough. It is her singing partner, the striking Mira Awad, who is grabbing most of the worldwide attention – switching casually between English, Hebrew and Arabic as the questions fly in, and clearly relishing every moment.
 
