added auto-crop to make thumbnails for ALL page using Mac Automator script on main image filer, and filtering by source to categories page

--- a/_posts/2015-10-09-mira-awad.md
+++ b/_posts/2015-10-09-mira-awad.md
@@ -2,10 +2,10 @@
 layout: post
 title: "Mira Awad"
 original_date: "May 2009"
-original_published: "Jewish Chronicle"
+source: "Jewish Chronicle"
 description: "Interview with pioneering Palestinian Israeli actor and singer"
 category: 'journalism'
-image: miraawad.jpg
+image: miraawad2.jpg
 tags: ['israel','television','eurovision','arabic', 'jewish chronicle']
 ---
 {% include JB/setup %}
