more posts and better tag links

--- a/_posts/2015-10-09-mira-awad.md
+++ b/_posts/2015-10-09-mira-awad.md
@@ -6,67 +6,43 @@ source: "Jewish Chronicle"
 description: "Interview with pioneering Palestinian Israeli actor and singer"
 category: 'journalism'
 image: miraawad2.jpg
-tags: ['israel','television','eurovision','arabic', 'jewish chronicle']
+genre: [pop, arabic, acoustic, trash, political]
+location: ['Israel','Palestine']
+artist: ['Mira Awad','Noa']
+tags: ['television','Eurovision','arabic','gaza','Israel','Palestine','Mira Awad','Noa', pop, acoustic, trash, political]
 ---
 {% include JB/setup %}
 
-<span class="marginnote">!['Mira Awad']({{ASSET_PATH}}tufte/images/miraawad.jpg)</span>
+<!--------------HELPERS------------->
+<!-- video helper -->
+<!-- {% include JB/video yt_id="UXwLBS3yUkA" text="Buena Vista: it never did get better than this." pre='' %} -->
+<!-- image helper: remote -->
+<!-- {% include JB/sideimage url="http://..." text="Buena Vista: it never did get better than this." %} -->
+<!-- image helper: local -->
+<!-- {% include JB/sideimage img="mypic.jpg" text="Buena Vista: it never did get better than this." %} -->
+<!-- link helper: open in new tab -->
+<!-- {% include JB/link url="http://..." linktext="Buena Vista: it never did get better than this." %} -->
+
+
+{% include JB/sideimage img="miraawad.jpg" alt="Mira Awad" %}
 
 The peace organisation OneVoice are throwing a farewell party in Tel Aviv’s Dizengoff Street for this year’s Israeli entry to the Eurovision Song Contest, and the two singers – newly anointed peace ambassadors for OneVoice – are being rushed from one soundbite hungry journalist to another in what is the last press opportunity before they leave for Moscow. For veteran singer and peace campaigner, Yemenite Israeli singer Achinoam ‘Noa’ Nini, this intense global media spotlight is nothing new: from recording songs for hit films such as ‘Goldeneye’ and Roberto Benigni’s ‘Life Is Beautiful’ to sharing stages with megastars like Sting and Stevie Wonder, the press know her well enough. It is her singing partner, the striking Mira Awad, who is grabbing most of the worldwide attention – switching casually between English, Hebrew and Arabic as the questions fly in, and clearly relishing every moment.
 
-
-<!-- <p>
-	<span class="marginnote">
-		<iframe width="auto" height="auto" src="https://www.youtube.com/embed/Fv83u7-mNWQ
-" frameborder="0" allowfullscreen> </iframe>
-	</span>
-	<span class="marginnote">
-		That great moment for you to savour again. And again. And again.
-	</span>
-</p>
- -->
+{% include JB/video yt_id="Fv83u7-mNWQ" text="That great moment for you to savour again. And again. And again." %}
 
 Israelis are savvy when it comes to public relations at the Eurovision Song Contest – just remember the show-stopping transsexual diva Dana International in 1998. But what has got the press pack arguably more excited than ever this year is that when Awad walks out onto the stage in Moscow next week, she will be the first Israeli Arab to ever represent the country at Eurovision, and what’s more, the kitschy, bouncy pop duet they will perform, ‘There Must Be Another Way’, has verses in both Hebrew and Arabic.
 
-<p>
-	<span class="marginnote">
-		<iframe width="auto" height="auto" src="https://www.youtube.com/embed/MtE-Qn_4iMU 
-" frameborder="0" allowfullscreen> </iframe>
-	</span>
-	<span class="marginnote">
-		Sadly only Hebrew and Arabic speakers can enjoy Arab Labor on Youtube. So, with apologies, a crass opinion piece.
-	</span>
-</p>
+{% include JB/video yt_id="MtE-Qn_4iMU" text="Sadly only Hebrew and Arabic speakers can enjoy Arab Labor on Youtube. So, with apologies, a crass opinion piece." %}
 
 Is it difficult not to get the feeling that Awad enjoys breaking convention very much. An accomplished stage actress, she starred in the Cameri Theatre’s acclaimed Plonter (Tangle) – in which both Jewish and Arab actors play each other’s parts and speak both languages – that was revived so memorably at London’s Barbican Center earlier this year. Then she starred in the groundbreaking Israeli comedy series ‘Avoda Aravit’ (Arab Labour), written by renowned novelist Sayed Kashua and the first bilingual primetime hit show in Israeli television history.
 
-
-
-
-
-
-
 With Mira Awad the actress firmly established as a rising star, Mira Awad the singer is wasting no time catching up. She first worked with Noa in 2002 on a version of the Beatles classic “We Can Work It Out” for the latter’s album ‘Now’, and has since contributed songs to soundtracks of hit Israeli films like Eran Riklis’s ‘Lemon Tree’ and Udi Aloni’s ‘Forgiveness’, and worked alongside world music superstar Idan Raichel. In her own forthcoming solo album, she cites both Arabic music and Pink Floyd as key influences. For Tel Aviv girl Awad – “I’ve been living here for 12 years now and I love it,” she enthuses, flashing a trademark grin – this constant, artistic blurring of linguistic and cultural lines is clearly where she feels most at home. Born to Bulgarian mother and Palestinian Christian father in the Galilee town of Rame in Northern Israel, her soaring profile – which has rapidly turned her into one of Israel’s most visible Arab public figures – has left her vulnerable to some harsh criticism. Learning of her official nomination as Israel’s Eurovision representative was a particularly difficult moment.
 
-<p>
-	<span class="marginnote">
-		<iframe width="auto" height="auto" src="https://www.youtube.com/embed/v-kq7xcPcas" frameborder="0" allowfullscreen> </iframe>
-	</span>
-	<span class="marginnote">
-		A classic Eurovision moment: going back to its <a href="https://en.wikipedia.org/wiki/Eurovision_Song_Contest#Origins" target="_blank">peacenik roots</a>.
-	</span>
-</p>
-
+{% include JB/video yt_id="v-kq7xcPcas" text='A classic Eurovision moment: going back to its <a href="https://en.wikipedia.org/wiki/Eurovision_Song_Contest#Origins" target="_blank">peacenik roots.</a>' %}
 
  > “The Gaza war [Operation Cast Lead] was a very painful time for everyone. Both Achinoam and I were glued to our televisions trying to take in everything that was going on there. And then the announcement came that we are going to be singing in Eurovision! We were very far from the mood of singing and writing songs.”
 
-
-
-
-
 Leading Arab Israeli intellectuals, including several well-known fellow actors and singers, published an open letter in which they called on Awad to boycott Eurovision. 
-
-
 
 Awad, the online petition argued, was helping the “propaganda machine that is trying to create the appearance of Jewish-Arab 'coexistence'” at a time of violent crisis in relations between Israelis and Palestinians. 
 
@@ -74,29 +50,11 @@ Awad, the online petition argued, was helping the “propaganda machine that is 
 
 She is philosophical about why she has been on the end of such attacks from other Israeli Arab artists.
 
-<p>
-	<span class="marginnote">
-		<iframe width="auto" height="auto" src="https://www.youtube.com/embed/5iqZzi9mj4M
-" frameborder="0" allowfullscreen> </iframe>
-	</span>
-	<span class="marginnote">
-		Mira Awad in discussion on stage.
-	</span>
-</p>
+{% include JB/video yt_id="5iqZzi9mj4M" text="Mira Awad in discussion on stage." %}
 
 > “I’m not a spokesperson for the Arab Israeli community,” she says. “I’m a spokesperson first of all for myself and secondly for everyone who wants me to be their spokesperson, like OneVoice, who asked us to speak for the voice that is still looking for dialogue, for an open window  to reach out and touch the other side. But I do think that this more militant way of expressing the pain comes from guilt – the guilt that every Palesinian living in Israel has, because we do not have to go through roadblocks, and we do not have to face the reality of occupation. At some point, I tried to rise above that kind of guilt and say: ‘OK, I might be feeling guilty for not being persecuted every day, but I need to look above and look at the life here.’ I am an Israeli citizen and I have a lot of friends who are Jewish, who are Israelis. They are not my enemy – they are people who love me, people who I love and care for a lot, who I would give my life for. The human connection is what comes first of all, before nationality and religion.”
  
-
-<p>
-	<span class="marginnote">
-		<iframe width="auto" height="auto" src="https://www.youtube.com/embed/wuLtQDs1Gb0 
-" frameborder="0" allowfullscreen> </iframe>
-	</span>
-	<span class="marginnote">
-		The official clip for this song has her cradling a rabbit. You're welcome.
-	</span>
-</p>
-
+{% include JB/video yt_id="wuLtQDs1Gb0" text="The official clip for this song has her cradling a rabbit. You're welcome." %}
 
 Awad is the first to admit that she would have loved to have left politics to one side and to be able to concentrate on her art. But as the title of her forthcoming debut album – ‘Bahlawan’ (Acrobat) –  makes clear, being a Arab artist in Israel who believes whole-heartedly in co-existence and open dialogue involves a constant balancing act between external pressures and expectations. 
 
