Improved radio pages, added to writing index

--- a/_posts/music/2015-10-21-latke.md
+++ b/_posts/music/2015-10-21-latke.md
@@ -1,7 +1,7 @@
 ---
 layout: music
 year: 2012
-title: "Latke"
+title: "The Latke Who Couldn't Stop Screaming"
 description: "A scrumptious children's play, with Tall Stories"
 image: "latke1-patrickbaldwin.jpg"
 category: "music"
@@ -10,11 +10,12 @@ genre: [kids, theatre]
 artist: [Tall Stories / The Latke Who Wouldn't Stop Screaming]
 tags: [kids, theatre, Tall Stories]
 vimeo: 58200572
+venue: Roundhouse
+director: Olivia Jacobs
+producer: Josephine Burton (Yad Arts)
+writer: Lemony Snicket (adapted by the cast)
 ---
 {% include JB/setup %}
-
-Roundhouse, London December 2012 - January 2013
-UK tour, December 2014-January 2015
 
 Daniel Handler - aka Lemony Snicket - is one of those children's writers you wish you were. I mean, really. His stories are dark, impishly funny and always done with style. 
 
