--- a/_posts/music/2015-10-25-the-table.md
+++ b/_posts/music/2015-10-25-the-table.md
@@ -1,6 +1,6 @@
 ---
 layout: music
-year: 2012
+year: 2011
 title: "The Table"
 description: "Bunraku puppet theatre, with Blind Summit"
 image: "blindsummit.jpg"
@@ -10,7 +10,38 @@ genre: [puppetry, theatre]
 artist: [Blind Summit]
 tags: [puppetry, theatre, Blind Summit]
 video: 3Dp4Z8CX9fg
+venue: Edinburgh Festival / Soho Theatre / Jacksons Lane
+director: Mark Down
+writer: Mark Down
+producer: Josephine Burton (Yad Arts)
 ---
 {% include JB/setup %}
 
-Japanese bunraku puppetry masters 
+Japanese bunraku puppetry masters Blind Summit do thought-provoking standup comedy theatre with pieces of cardboard and a huge amount of skill and deftness of touch.
+
+Working with them was a real pleasure.
+
+<h3>Blurb</h3>
+
+>> Moses is a cantankerous 3 man operated puppet with a cardboard head... who lives on a table. Tonight he wants to tell you an epic story about God and Moses, life and death, and puppetry... on a table. But he gets easily distracted. 
+
+>> Like a cross of Tommy Cooper and Eddie Izzard, this table-top philosopher and comedian is the funniest "piece of cardboard" you will ever meet.
+
+<h3>Press</h3>
+
+>> "Dazzling", Scotsman ****
+
+>> "Astonishingly accomplished", Telegraph ****
+
+>> "Brilliantly funny", Time Out ****
+
+>> "Blind Summit prove once again that when you're working in miniature you don't have to think small",  Guardian ****
+
+>> **** The Times **** The Independent **** What's On Stage ***** SG Magazine ***** Exeunt Magazine **** Edinburgh Spotlight ***** The Public Reviews **** Three Weeks **** Broadway Baby **** The List
+
+FRINGE FIRST WINNER  
+PICK OF THE FEST Guardian  
+ONE OF THE TOP 5 MODERN PUPPET SHOWS Sunday Telegraph  
+GRAND PRIX Kontrapunkt Festival, Poland   
+GRAND PRIX International Festival of Puppetry Art, Poland  
+Drac d'Or Julieta Agusti for The Best Show & The Best Dramaturgy, Fira de Titelles de Llieda, Spain
