--- a/_posts/music/2015-10-22-lazlo.md
+++ b/_posts/music/2015-10-22-lazlo.md
@@ -10,6 +10,8 @@ genre: ['political','pop', hungarian, punk]
 artist: [Kistehen, Lazlo]
 soundcloud: 1618449
 tags: [hungarian, punk, Lazlo, Kistehen, political, pop]
+label: Absolute
+publisher: EMI Hungary
 ---
 
 There are a few artists to whom lyrics really matter. When those artists are people who you chime with emotionally and politically, the entire process of songwriting is a life-affirming activity.
