fixed category tags layout

--- a/_posts/cv/2015-10-14-music-cv.md
+++ b/_posts/cv/2015-10-14-music-cv.md
@@ -9,7 +9,7 @@ tags: [CV, music]
 {% include JB/setup %}
 
 <h2>Bands</h2>
-- <a href="http://nightjar.co.uk/tag/world-class-brass/" target="_blank">World Class Brass</a>, BBC Radio 2 (three part series), 2012
+- <a href="http://nightjar.co.uk/tag/world-class-brass/"  >World Class Brass</a>, BBC Radio 2 (three part series), 2012
 
 <h2>Songwriting</h2>
 
