--- a/_posts/writing/2015-10-09-mira-awad.md
+++ b/_posts/writing/2015-10-09-mira-awad.md
@@ -39,7 +39,7 @@ Is it difficult not to get the feeling that Awad enjoys breaking convention very
 
 With Mira Awad the actress firmly established as a rising star, Mira Awad the singer is wasting no time catching up. She first worked with Noa in 2002 on a version of the Beatles classic “We Can Work It Out” for the latter’s album ‘Now’, and has since contributed songs to soundtracks of hit Israeli films like Eran Riklis’s ‘Lemon Tree’ and Udi Aloni’s ‘Forgiveness’, and worked alongside world music superstar Idan Raichel. In her own forthcoming solo album, she cites both Arabic music and Pink Floyd as key influences. For Tel Aviv girl Awad – “I’ve been living here for 12 years now and I love it,” she enthuses, flashing a trademark grin – this constant, artistic blurring of linguistic and cultural lines is clearly where she feels most at home. Born to Bulgarian mother and Palestinian Christian father in the Galilee town of Rame in Northern Israel, her soaring profile – which has rapidly turned her into one of Israel’s most visible Arab public figures – has left her vulnerable to some harsh criticism. Learning of her official nomination as Israel’s Eurovision representative was a particularly difficult moment.
 
-{% include video id="v-kq7xcPcas" text='A classic Eurovision moment: going back to its <a href="https://en.wikipedia.org/wiki/Eurovision_Song_Contest#Origins" target="_blank">peacenik roots.</a>' %}
+{% include video id="v-kq7xcPcas" text='A classic Eurovision moment: going back to its <a href="https://en.wikipedia.org/wiki/Eurovision_Song_Contest#Origins"  >peacenik roots.</a>' %}
 
  > “The Gaza war [Operation Cast Lead] was a very painful time for everyone. Both Achinoam and I were glued to our televisions trying to take in everything that was going on there. And then the announcement came that we are going to be singing in Eurovision! We were very far from the mood of singing and writing songs.”
 
