--- a/_posts/music/2015-10-25-the-table.md
+++ b/_posts/music/2015-10-25-the-table.md
@@ -14,6 +14,7 @@ venue: Edinburgh Festival / Soho Theatre / Jacksons Lane
 director: Mark Down
 writer: Mark Down
 producer: Josephine Burton (Yad Arts)
+soundcloud-track: 44011646
 ---
 {% include JB/setup %}
 
