adding about stuff and GH vis bar

--- a/_posts/cv/2015-10-14-music-cv.md
+++ b/_posts/cv/2015-10-14-music-cv.md
@@ -3,7 +3,7 @@ layout: post
 title: "Music CV"
 description: "Music Projects"
 image: jon-trumpet.jpg
-category: CV
+category: cv
 tags: [CV, music]
 ---
 {% include JB/setup %}
