--- a/_posts/music/2015-10-22-oi-va-voi.md
+++ b/_posts/music/2015-10-22-oi-va-voi.md
@@ -10,20 +10,14 @@ artist: [Oi Va Voi]
 tags: [Oi Va Voi, world, klezmer, political, pop]
 soundcloud: 158696711
 ---
+
+
+<span class="marginnote"><iframe width="auto" height="auto" src="https://www.youtube.com/embed/h2572hLy7AA" frameborder="0" allowfullscreen webkitallowfullscreen mozallowfullscreen ></iframe></span>
+<span class="marginnote">At this show the crowd even sang me Happy Birthday. sigh. Happy Days.</span>
+
+<span class="newthought">I founded, </span>wrote for and led a band for 7 years. On stage, I sang and played trumpet. People seemed to like us, and we played some decent shows. We were signed to Outcaste/EMI, and then Virgin/V2. I was lucky enough to work at length with some outrageously talented people, like KT Tunstall, Mike Spencer, Paul Epworth, Maurice El Medioni.
+
 This was a longstanding labour of love: undertaken at a time when I was researching deeply into my roots and identity, and found a community of musicians and voyagers to share it with.
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-
-
+      
+     
