images click to toggle bigger

--- a/_posts/music/2015-10-22-lazlo.md
+++ b/_posts/music/2015-10-22-lazlo.md
@@ -20,5 +20,42 @@ This is how it was with Laszlo Kollar Klemencz, aka Lazlo from Kistehen / Little
 
 The reason he has so many names is because he is Hungarian, and there was much debate about what to call his first foray into the UK market.
 
+The last time Lazlo’s country – Hungary – was in the news, there were tanks on the streets. It’s back in our headlines again now, and for all the wrong reasons.
 
+I'd jump at the chance to work with him again: he's a sweet, down to earth person, a charismatic performer, and an engaged, talented artist with a lot to say.
+
+<h3>What The Artist Says</h3>
+
+"Hungary is in a frightening place. The media is under totalitarian government control, they have replaced the directors in our radio stations, theatres, arts venues. They will change what they play there too. All art must be ‘national’ or patriotic. Surviving here – as an artist, a father, a free man – gets harder each day.
+ 
+I’m not one of those artists who is into politics and shouting slogans. Politics is too shallow to sing about. I prefer to sing about people, about human behaviour. But of course my songs are exploding with questions:
+
+How did this happen here? How did that populist, aggressive, retrograde attitude brainwash my country? Why is it not balanced by other, sane voices? Is Hungary having a nervous breakdown that it will recover from, or is the country I know dying? Is there a place for me and people like me any more? If I stay here, how? What can I say to people I love – my mother and my sister –  who have become part of it all?
+
+This is what my lyrics are about. There is so much negativity and fear on the streets, simple daily things have become much harder. So I am responding through my music in the only way that makes sense: love and openness. Even if I’m the last man standing, that’s what I’ll be doing. There is no other way. Now more than ever, all we need is normal, healthy words. With enough of them, we can be louder.” 
+
+<h3>Press</h3>
+
+<blockquote>
+	<p>To a lot of people, music is seen as an art form and should that be true, Lazlo is the Banksy of music – tongue in cheek while sticking his middle finger up to society.
+	</p>
+<footer> Rock Reviews 24/7</footer>
+</blockquote>
+
+
+<blockquote>
+	<p>A complicated and eccentric sounding mixture of noise, ultimately designed to ensnare the senses with what could almost be described as auditory mayhem, an ode to political punk rock and social observations... completely original, completely eccentric and completely crazy socio-political punk gold-dust.</p>
+<footer>Popped Culture</footer> 
+</blockquote>
+
+<blockquote>
+<p>It's a shame that so many foreign artists don't get the help of award-winning producers such as KT Tunstall's and Jamiroquai's, because if they are half as thrilling as Lazlo then we are missing out.</p>
+<footer>Room 13</footer> 
+</blockquote>
+
+<blockquote>
+	<p>No other artist out there comes close to his unique mix of apocalyptic comment and razor-sharp humour.</p> 
+
+<footer>AltSounds</footer>
+</blockquote>
 
