--- a/_posts/music/2015-10-22-oi-va-voi.md
+++ b/_posts/music/2015-10-22-oi-va-voi.md
@@ -19,5 +19,18 @@ soundcloud: 158696711
 
 This was a longstanding labour of love: undertaken at a time when I was researching deeply into my roots and identity, and found a community of musicians and voyagers to share it with.
 
-      
+
+<h3>Press</h3>
+
+<blockquote>
+	<p></p> 
+
+<footer></footer>
+</blockquote>
+
+<blockquote>
+	<p></p> 
+
+<footer></footer>
+</blockquote>
      
