--- a/_posts/music/2015-10-25-the-table.md
+++ b/_posts/music/2015-10-25-the-table.md
@@ -29,20 +29,31 @@ Working with them was a real pleasure.
 >> Like a cross of Tommy Cooper and Eddie Izzard, this table-top philosopher and comedian is the funniest "piece of cardboard" you will ever meet.
 
 <h3>Press</h3>
+<blockquote>
+<p>Blind Summit prove once again that when you're working in miniature you don't have to think small</p>
+<footer>Guardian ****</footer>
+</blockquote>
 
->> "Dazzling", Scotsman ****
+<blockquote>
+<p>Astonishingly accomplished</p>
+<footer>Telegraph ****</footer>
+</blockquote>
+<blockquote>
+<p>Brilliantly funny</p>
+<footer>Time Out ****</footer>
+</blockquote>
 
->> "Astonishingly accomplished", Telegraph ****
+<blockquote>
+<p>FRINGE FIRST WINNER</p>  
+<p>PICK OF THE FEST Guardian  </p>
+<p>ONE OF THE TOP 5 MODERN PUPPET SHOWS Sunday Telegraph  </p>
+<p>GRAND PRIX Kontrapunkt Festival, Poland   </p>
+<p>GRAND PRIX International Festival of Puppetry Art, Poland  </p>
+<p>Drac d'Or Julieta Agusti for The Best Show & The Best Dramaturgy, Fira de Titelles de Llieda, Spain</p>
+<footer></footer>
+</blockquote>
+<blockquote>
+<p>**** The Times **** The Independent **** What's On Stage ***** SG Magazine ***** Exeunt Magazine **** Edinburgh Spotlight ***** The Public Reviews **** Three Weeks **** Broadway Baby **** The List</p>
+<footer></footer>
+</blockquote>
 
->> "Brilliantly funny", Time Out ****
-
->> "Blind Summit prove once again that when you're working in miniature you don't have to think small",  Guardian ****
-
->> **** The Times **** The Independent **** What's On Stage ***** SG Magazine ***** Exeunt Magazine **** Edinburgh Spotlight ***** The Public Reviews **** Three Weeks **** Broadway Baby **** The List
-
-FRINGE FIRST WINNER  
-PICK OF THE FEST Guardian  
-ONE OF THE TOP 5 MODERN PUPPET SHOWS Sunday Telegraph  
-GRAND PRIX Kontrapunkt Festival, Poland   
-GRAND PRIX International Festival of Puppetry Art, Poland  
-Drac d'Or Julieta Agusti for The Best Show & The Best Dramaturgy, Fira de Titelles de Llieda, Spain
