--- a/_posts/music/2015-10-22-sevara.md
+++ b/_posts/music/2015-10-22-sevara.md
@@ -24,3 +24,10 @@ quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+<h3>Press</h3>
+
+<blockquote>
+	<p></p>
+	<footer></footer>
+</blockquote>
