added world page with d3

--- a/_posts/music/2015-10-21-latke.md
+++ b/_posts/music/2015-10-21-latke.md
@@ -8,7 +8,8 @@ category: "music"
 area: theatre
 genre: [kids, theatre]
 artist: [Tall Stories / The Latke Who Wouldn't Stop Screaming]
-tags: [kids, theatre, Tall Stories]
+location: [United Kingdom]
+tags: [kids, theatre, Tall Stories, United Kingdom]
 vimeo: 58200572
 venue: Roundhouse
 director: Olivia Jacobs
