--- a/_posts/music/2015-10-22-alik.md
+++ b/_posts/music/2015-10-22-alik.md
@@ -6,9 +6,10 @@ description: "Russian Ukrainian legend"
 image: "Alec_kopyt2.jpg"
 category: "music"
 area: concept/production
-genre: ['russian','country']
+genre: ['shanson','country']
+location: [Russia, Netherlands, Ukraine]
 artist: [Alec Kopyt]
-tags: [Alec Kopyt, country, Russian]
+tags: [Alec Kopyt, country, Russia, Netherlands, Ukraine, shanson]
 soundcloud: 153137883
 ---
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
