--- a/_posts/music/2015-10-22-lazlo.md
+++ b/_posts/music/2015-10-22-lazlo.md
@@ -8,8 +8,9 @@ category: "music"
 area: songwriting
 genre: ['political','pop', hungarian, punk]
 artist: [Kistehen, Lazlo]
+location: [United Kingdom, Hungary]
 soundcloud: 1618449
-tags: [hungarian, punk, Lazlo, Kistehen, political, pop]
+tags: [hungarian, punk, Lazlo, Kistehen, political, pop, United Kingdom, Hungary]
 label: Absolute
 publisher: EMI Hungary
 ---
