--- a/_posts/music/2015-10-22-sevara.md
+++ b/_posts/music/2015-10-22-sevara.md
@@ -7,8 +7,9 @@ image: "sevara.jpg"
 category: "music"
 area: songwriting
 genre: ['uzbek','pop']
+location: Uzbekistan
 artist: [Sevara Nazarkhan]
-tags: [uzbek, pop, Sevara Nazarkhan]
+tags: [uzbek, pop, Sevara Nazarkhan, Uzbekistan]
 ---
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
