--- a/_posts/music/2015-10-25-the-table.md
+++ b/_posts/music/2015-10-25-the-table.md
@@ -8,7 +8,8 @@ category: "music"
 area: theatre
 genre: [puppetry, theatre]
 artist: [Blind Summit]
-tags: [puppetry, theatre, Blind Summit]
+tags: [puppetry, theatre, Blind Summit, United Kingdom]
+location: United Kingdom
 video: 3Dp4Z8CX9fg
 venue: Edinburgh Festival / Soho Theatre / Jacksons Lane
 director: Mark Down
