--- a/_posts/music/2015-10-27-album-61.md
+++ b/_posts/music/2015-10-27-album-61.md
@@ -4,7 +4,7 @@ category: music
 title: "Album 61"
 description: "Psychological chess documentary thriller"
 image: album61.png
-genre:
+genre:	soundtrack
 artist: []
 publisher: 
 year: 2013
@@ -12,9 +12,10 @@ director: Halil Efrat
 producer: MYTV
 area: film
 venue: 
+location: [Israel, India, Belarus]
 video: WWUz0CHZznk
 videotext: "Album 61, full feature documentary"
-tags: []
+tags: [Israel, India, Belarus, soundtrack, film]
 ---
 {% include JB/setup %}
 
