--- a/_posts/writing/2015-10-09-mira-awad.md
+++ b/_posts/writing/2015-10-09-mira-awad.md
@@ -7,10 +7,10 @@ description: "Interview with pioneering Palestinian Israeli actor and singer"
 category: 'journalism'
 image: miraawad2.jpg
 genre: [pop, arabic, acoustic, trash, political]
-location: ['Israel','Palestine']
+location: ['Israel', 'Palestine']
 artist: ['Mira Awad','Noa']
 topic: [television, Eurovision, gaza]
-tags: ['television','Eurovision','arabic','gaza','Israel','Palestine','Mira Awad','Noa', pop, acoustic, trash, political]
+tags: ['television','Eurovision','arabic','gaza', 'Mira Awad','Noa', pop, acoustic, trash, political, 'Israel', 'Palestine']
 ---
 {% include JB/setup %}
 
