--- a/_posts/music/2015-10-22-alik.md
+++ b/_posts/music/2015-10-22-alik.md
@@ -1,34 +1,25 @@
 ---
 layout: music
-year: 2014
+year: 2013
 title: "Alec Kopyt"
 description: "Russian Ukrainian legend"
 image: "Alec_kopyt2.jpg"
 category: "music"
-area: concept/production
+area: band
 genre: ['shanson','country']
 location: [Russia, Netherlands, Ukraine]
-artist: [Alec Kopyt]
-tags: [Alec Kopyt, country, Russia, Netherlands, Ukraine, shanson]
+artist: [Alec Kopyt, Isaac Babel]
+tags: [Alec Kopyt, country, Russia, Netherlands, Ukraine, shanson, Isaac Babel]
 soundcloud: 153137883
 ---
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+I have loved Alec Kopyt's music since my student days: someone passed me a record by a four piece from Amsterdam called Poza, and I thought it was magical.
 
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+There were a few things about it that stood out. There was a direct, no frills, simplicity in the arrangements that gave noone anywhere to hide. The musicians played with a rough attitude that had bags of style. The songs were raucous tales of Yiddish gangsters and hoodlums that I knew and loved from the stories of Isaac Babel. And the lead singer had a voice that was by turn gruff sandpaper and sweetness itself.
 
-<h3>Press</h3>
+He joined another band, the Amsterdam Klezmer Band, and toured the world with them. But their spit and polish, in my opinion, never came close to the raw authenticity of that first album by Poza. So when I saw him backstage at the Sziget Festival, I jumped at the chance.
 
-<blockquote>
-	<p></p>
-	<footer></footer>
-</blockquote>
+These as yet unreleased tracks, recorded in three days in a London winter, are what I was waiting to hear again these years.
+
+Bass: Liran Donin
+Drums: Roy Pfeffer
+Production/mix/concept: Lemez Lovas & Yaniv Fridel.
