--- a/_posts/tech/2015-10-26-rebeats.md
+++ b/_posts/tech/2015-10-26-rebeats.md
@@ -14,3 +14,6 @@ area: education
 tags: [tech, coding, education, lifelong learning]
 ---
 {% include JB/setup %}
+
+Site is live at http://www.rebeats.tv
+More information coming soon.
