more reviews, review page tweaks

--- a/_posts/music/2015-10-25-the-table.md
+++ b/_posts/music/2015-10-25-the-table.md
@@ -6,7 +6,7 @@ description: "Bunraku puppet theatre, with Blind Summit"
 image: "blindsummit.jpg"
 category: "music"
 area: theatre
-genre: [puppetry, theatre]
+genre: [theatre]
 artist: [Blind Summit]
 tags: [puppetry, theatre, Blind Summit, UK]
 location: UK
