--- a/_posts/tech/2015-10-26-rebeats.md
+++ b/_posts/tech/2015-10-26-rebeats.md
@@ -1,19 +1,18 @@
 ---
-layout: post
+layout: tech
 category: "tech"
+year: 2014
+area: education 
+
 title: "ReBeats"
 description: "Can Music Videos Help You Learn English?"
 image: Adele.jpeg
-area: education
-genre: []
-artist: []
-label: 
-publisher: 
-year: 2014
-area: education 
+
+github: 0
+demo: http://www.rebeats.tv
+
 tags: [tech, coding, education, lifelong learning]
 ---
 {% include JB/setup %}
 
-Site is live at http://www.rebeats.tv
 More information coming soon.
