--- a/_posts/music/2015-10-21-latke.md
+++ b/_posts/music/2015-10-21-latke.md
@@ -14,6 +14,7 @@ vimeo: 58200572
 venue: Roundhouse
 director: Olivia Jacobs
 producer: Josephine Burton (Yad Arts)
+people: [Yaniv Fridel (production/mix), Stuart Barter (banjo/guitar)]
 writer: Lemony Snicket (adapted by the cast)
 ---
 {% include JB/setup %}
