--- a/_posts/music/2015-10-22-alik.md
+++ b/_posts/music/2015-10-22-alik.md
@@ -10,8 +10,11 @@ genre: ['shanson','country']
 location: [Russia, Netherlands, Ukraine]
 artist: [Alec Kopyt, Isaac Babel]
 tags: [Alec Kopyt, country, Russia, Netherlands, Ukraine, shanson, Isaac Babel]
+people: [Ben Mandelson (guitar), Liran Donin (bass), Roy Pfeffer (drums), Yaniv Fridel (production/mix)]
 soundcloud: 153137883
 ---
+{% include video id="0_jRNvHx1E4?t=1m2s" text="Rare footage of Poza as a duo live, from 2001" %}
+
 I have loved Alec Kopyt's music since my student days: someone passed me a record by a four piece from Amsterdam called Poza, and I thought it was magical.
 
 There were a few things about it that stood out. There was a direct, no frills, simplicity in the arrangements that gave noone anywhere to hide. The musicians played with a rough attitude that had bags of style. The songs were raucous tales of Yiddish gangsters and hoodlums that I knew and loved from the stories of Isaac Babel. And the lead singer had a voice that was by turn gruff sandpaper and sweetness itself.
@@ -19,7 +22,3 @@ There were a few things about it that stood out. There was a direct, no frills, 
 He joined another band, the Amsterdam Klezmer Band, and toured the world with them. But their spit and polish, in my opinion, never came close to the raw authenticity of that first album by Poza. So when I saw him backstage at the Sziget Festival, I jumped at the chance.
 
 These as yet unreleased tracks, recorded in three days in a London winter, are what I was waiting to hear again these years.
-
-Bass: Liran Donin
-Drums: Roy Pfeffer
-Production/mix/concept: Lemez Lovas & Yaniv Fridel.
