--- a/_posts/music/2015-10-22-lazlo.md
+++ b/_posts/music/2015-10-22-lazlo.md
@@ -12,6 +12,7 @@ location: [UK, Hungary]
 soundcloud: 1618449
 tags: [hungarian, punk, Lazlo, Kistehen, political, pop, UK, Hungary]
 label: Absolute
+people: [Laci Kollar Klemencz - songwriting, Yaniv Fridel - mix]
 publisher: EMI Hungary
 ---
 
