--- a/_posts/music/2015-10-22-oi-va-voi.md
+++ b/_posts/music/2015-10-22-oi-va-voi.md
@@ -8,6 +8,7 @@ category: "music"
 area: band
 artist: [Oi Va Voi]
 tags: [Oi Va Voi, world, klezmer, political, pop]
+people: [Mike Spencer - production, Bacon & Quarmby - production, Moshikop - sound/mixing]
 soundcloud: 158696711
 ---
 
