--- a/_posts/music/2015-10-22-sevara.md
+++ b/_posts/music/2015-10-22-sevara.md
@@ -9,8 +9,9 @@ area: songwriting
 genre: ['uzbek','pop']
 location: Uzbekistan
 artist: [Sevara Nazarkhan]
+people: [Sevara Nazarkhan - voice, Marat Maksudi - keyboards]
 soundcloud-track: 
 tags: [uzbek, pop, Sevara Nazarkhan, Uzbekistan]
 ---
 
-{% include sideimage img="sevjon.jpg" text="In a Tashkent eatery. As are most of my photos from this trip. If you get cold, you can even wear the bread <a href='http://www.tourstouzbekistan.com/uploads/news/my_files/uzbek_food/06.jpg'>as a hat.</a>" %}
+{% include sideimage img="sevjon.jpg" text="In Tashkent with the leading lady." %}
