--- a/_posts/music/2015-10-25-the-table.md
+++ b/_posts/music/2015-10-25-the-table.md
@@ -14,6 +14,7 @@ video: 3Dp4Z8CX9fg
 venue: Edinburgh Festival / Soho Theatre / Jacksons Lane
 director: Mark Down
 writer: Mark Down
+people: [Yaniv Fridel - mix/composition]
 producer: Josephine Burton (Yad Arts)
 ---
 {% include JB/setup %}
