--- a/_posts/tech/2015-10-26-rebeats.md
+++ b/_posts/tech/2015-10-26-rebeats.md
@@ -7,6 +7,7 @@ area: education
 title: "ReBeats"
 description: "Can Music Videos Help You Learn English?"
 image: Adele.jpeg
+icon: "jonascii.png"
 
 github: 0
 demo: http://www.rebeats.tv
