--- a/_posts/music/2015-10-27-album-61.md
+++ b/_posts/music/2015-10-27-album-61.md
@@ -15,6 +15,7 @@ venue:
 location: [Israel, India, Belarus]
 video: WWUz0CHZznk
 videotext: "Album 61, full feature documentary"
+people: [Yaniv Fridel - mix/production/composition, Ben Mandelson - guitar]
 tags: [Israel, India, Belarus, soundtrack, film]
 ---
 {% include JB/setup %}
